<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:transitionName="@string/transition_store_detailed">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbarlayout_height"
                android:fitsSystemWindows="true"
                app:contentScrim="@android:color/transparent"
                app:expandedTitleMarginBottom="@dimen/general_margin"
                app:expandedTitleMarginEnd="@dimen/general_margin"
                app:expandedTitleMarginStart="@dimen/general_margin"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_detailed_item"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/toolbarlayout_height"
                    android:alpha=".7"
                    android:contentDescription="@string/app_name"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/dummy"
                    android:transitionName="@string/image_store_detailed"
                    app:layout_collapseMode="parallax" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txt_rest_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/clanpro_bold"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/text_color_black" />

                    <TextView
                        android:id="@+id/txt_rest_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_rest_name"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="@dimen/semi_margin"
                        android:fontFamily="@font/clanpro"
                        android:text="@string/menu_info"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/text_color_black" />
                </RelativeLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/off_white"
            android:cacheColorHint="@android:color/transparent"
            android:clipToPadding="false"
            android:fadeScrollbars="true"
            android:orientation="vertical"
            android:paddingTop="@dimen/semi_margin"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="@dimen/semi_margin"
                android:text="@string/menu_detailed"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/text_color_black" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_time_rest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawablePadding="@dimen/quad_margin"
                android:drawableStart="@drawable/time"
                android:gravity="center"
                android:paddingBottom="@dimen/semi_margin"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/text_color_gray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:clipToPadding="false"
                android:fadeScrollbars="true"
                android:scrollbars="vertical"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>